@@ -21,6 +21,7 @@ import org.springframework.web.bind.annotation.RequestParam;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
@@ -42,14 +43,10 @@ public class PlayerChallengesController {
     @GetMapping(value="/challenge")
     public String playerChallenges (@RequestParam("summonerName") String summonerName, Model model){
         if (summonerName.length() == 2) {
-            summonerName = summonerName.substring(0, 1) + " " + summonerName.substring(1);
+            summonerName = summonerName.charAt(0) + " " + summonerName.substring(1);
         }
         String esummonerName = null;
-        try {
-            esummonerName = URLEncoder.encode(summonerName, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
-        }
+        esummonerName = URLEncoder.encode(summonerName, StandardCharsets.UTF_8);
 
         // 등급순으로 정렬해주기 위한 작업
         Map<String, Integer> levelOrder = new HashMap<>();
